# AndroidFacedemo

./: README.md  gradle.properties  import-summary.txt  settings.gradle
app/: CMakeLists.rar  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/openailab/track/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/facecaffe/: CMakeLists.txt  caffe_mtcnn.cpp  face_align.cpp  face_demo.cpp  feature_extractor.cpp  mtcnn.cpp  scale_angle.cpp  simple_verifier.cpp
app/src/main/cpp/include/: face_demo.hpp  scale_angle.h
app/src/main/cpp/include/conf/: com_openailab_speechrecognition_SpeechRecognitionJNI.h
app/src/main/java/com/openailab/speechrecognition/: SpeechRecognitionJNI.java
app/src/main/java/com/openailab/track/: MainActivity.java  MainActivity.rar  NDKUtils.java  PermissionsDelegate.java
app/src/main/res/layout/: activity_main.xml  activity_main1.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/openailab/track/: ExampleUnitTest.java
openCVLibrary331/: build.gradle
openCVLibrary331/src/main/: AndroidManifest.xml
openCVLibrary331/src/main/java/org/opencv/android/: AsyncServiceHelper.java
prebuilts/: BasicGLSurfaceView.apk
prebuilts/CaffeOnACL/include/caffe/proto/: caffe.pb.h
prebuilts/CaffeOnACL/python/caffe/proto/: caffe_pb2.py
prebuilts/CaffeOnACL/share/Caffe/: CaffeConfig.cmake  CaffeTargets-release.cmake  CaffeTargets.cmake
prebuilts/gflags/lib/cmake/gflags/: gflags-targets.cmake
prebuilts/gflags/lib/pkgconfig/: gflags.pc
prebuilts/glog/lib/cmake/glog/: glog-config.cmake  glog-targets.cmake
prebuilts/openblas/lib/: libopenblas.so.0
prebuilts/openblas/lib/cmake/openblas/: OpenBLASConfig.cmake
prebuilts/openblas/lib/pkgconfig/: openblas.pc
prebuilts/opencv/sdk/native/jni/: OpenCV.mk
prebuilts/opencv/sdk/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
prebuilts/protobuf/lib/cmake/protobuf/: protobuf-targets.cmake
